more cleanup, tests passing

--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -160,6 +160,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.grpc.pb.h
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.pb.cc
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.pb.h
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.grpc.pb.cc
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.grpc.pb.h
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.pb.cc
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.pb.h
     ${PROTO_GEN_DIR}/tagger/v1/tagger.grpc.pb.cc
     ${PROTO_GEN_DIR}/tagger/v1/tagger.grpc.pb.h
     ${PROTO_GEN_DIR}/tagger/v1/tagger.pb.cc
@@ -234,6 +238,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.grpc.pb.cc
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.pb.cc
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.grpc.pb.cc
+    ${PROTO_GEN_DIR}/service/motion/v1/motion.pb.cc
     ${PROTO_GEN_DIR}/tagger/v1/tagger.grpc.pb.cc
     ${PROTO_GEN_DIR}/tagger/v1/tagger.pb.cc
   PUBLIC FILE_SET viamapi_includes TYPE HEADERS
@@ -268,6 +274,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/tagger/v1/tagger.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/service/mlmodel/v1/mlmodel.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/service/mlmodel/v1/mlmodel.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/service/motion/v1/motion.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/service/motion/v1/motion.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/tagger/v1/tagger.pb.h
 )
 
