--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -202,6 +202,11 @@ target_link_libraries(viamsdk
 )
 
 
+if (APPLE)
+  target_link_libraries(viamsdk PUBLIC "-framework Security")
+endif()
+
+
 install(
   TARGETS viamsdk
   EXPORT viamsdk
