--- a/src/viam/examples/modules/complex/proto/buf.yaml
+++ b/src/viam/examples/modules/complex/proto/buf.yaml
@@ -12,35 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_executable(complex_module
-  main.cpp
-)
 
-target_sources(complex_module
-  PRIVATE
-    base/impl.cpp
-    base/impl.hpp
-    gizmo/impl.cpp
-    gizmo/impl.hpp
-    gizmo/api.cpp
-    gizmo/api.hpp
-
-    proto/gizmo.grpc.pb.cc
-    proto/gizmo.grpc.pb.h
-    proto/gizmo.pb.cc
-    proto/gizmo.pb.h
-    proto/summation.grpc.pb.cc
-    proto/summation.grpc.pb.h
-    proto/summation.pb.cc
-    proto/summation.pb.h
-)
-
-target_link_libraries(complex_module
-  PRIVATE Threads::Threads
-  viam-cpp-sdk::viamsdk
-)
-
-install(
-  TARGETS complex_module
-  COMPONENT examples
-)
+version: v1
+deps:
+  - buf.build/googleapis/googleapis
+breaking:
+  use:
+    - FILE
+lint:
+  use:
+    - DEFAULT
