--- a/src/viam/examples/modules/complex/config/buf.gen.remote.plugin.yaml.in
+++ b/src/viam/examples/modules/complex/config/buf.gen.remote.plugin.yaml.in
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(tflite)
-add_subdirectory(simple)
-add_subdirectory(complex)
+version: v1
+managed:
+  enabled: true
+plugins:
+  - plugin: buf.build/grpc/cpp:v@VIAMCPPSDK_GRPCXX_VERSION@
+    out: gen
+  - plugin: buf.build/protocolbuffers/cpp
+    out: gen
