successful .deb if you remove examples

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -249,3 +249,9 @@ install(FILES
 
 
 add_subdirectory(tests)
+
+set(CPACK_GENERATOR "DEB")
+set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+set(CPACK_COMPONENTS_ALL viam-cpp-sdk_dev)
+set(CPACK_PACKAGE_CONTACT "OY TIS")
+include(CPack)
