debian packaging workflow

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -253,5 +253,6 @@ add_subdirectory(tests)
 set(CPACK_GENERATOR "DEB")
 set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 set(CPACK_COMPONENTS_ALL viam-cpp-sdk_dev)
-set(CPACK_PACKAGE_CONTACT "OY TIS")
+set(CPACK_PACKAGE_CONTACT "packaging@viam.com")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libprotobuf32, libgrpc++1.51, libabsl20220623")
 include(CPack)
