--- a/src/viam/CMakeLists.txt
+++ b/src/viam/CMakeLists.txt
@@ -14,6 +14,7 @@
 
 add_subdirectory(api)
 add_subdirectory(sdk)
+add_subdirectory(examples)
 
 # Generate CMake configs to enable importing this project
 # into others via `find_package`.
