hardcode prefix, lowercase grpc

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -255,4 +255,5 @@ set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
 set(CPACK_COMPONENTS_ALL viam-cpp-sdk_dev)
 set(CPACK_PACKAGE_CONTACT "packaging@viam.com")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libprotobuf32, libgrpc++1.51, libabsl20220623")
+set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 include(CPack)
