--- a/src/viam/api/config/viam-cpp-sdk-libviamapi.pc.in
+++ b/src/viam/api/config/viam-cpp-sdk-libviamapi.pc.in
@@ -1,4 +1,4 @@
-prefix=@CPACK_PACKAGING_INSTALL_PREFIX@
+prefix=/usr
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 base_includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 deep_includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/viam/api
