--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -45,7 +45,7 @@ jobs:
       run: mkdir build
     - name: cmake
       working-directory: ./build
-      run: cmake .. -G Ninja
+      run: cmake -DCMAKE_INSTALL_PREFIX=/usr .. -G Ninja
     - name: build
       working-directory: ./build
       run: ninja libviamsdk.so && cpack
