--- a/src/viam/sdk/config/viam-cpp-sdk-libviamsdk.pc.in
+++ b/src/viam/sdk/config/viam-cpp-sdk-libviamsdk.pc.in
@@ -1,4 +1,4 @@
-prefix=/usr
+prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/viam/sdk
 
