--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -50,7 +50,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         with:
           commit-message: '[WORKFLOW] Updating protos from ${{ github.event.client_payload.repo_name }}, commit: ${{ github.event.client_payload.sha }}'
-          branch: 'origin/update-protos'
+          branch: 'workflow/update-protos'
           add-paths: src/viam/api/*
           delete-branch: true
           title: Automated Protos Update
