--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -71,6 +71,9 @@ target_sources(viamsdk
     components/movement_sensor/client.cpp
     components/movement_sensor/movement_sensor.cpp
     components/movement_sensor/server.cpp
+    components/sensor/client.cpp
+    components/sensor/sensor.cpp
+    components/sensor/server.cpp
     config/resource.cpp
     module/handler_map.cpp
     module/module.cpp
@@ -127,6 +130,9 @@ target_sources(viamsdk
       ../../viam/sdk/components/movement_sensor/client.hpp
       ../../viam/sdk/components/movement_sensor/movement_sensor.hpp
       ../../viam/sdk/components/movement_sensor/server.hpp
+      ../../viam/sdk/components/sensor/client.hpp
+      ../../viam/sdk/components/sensor/sensor.hpp
+      ../../viam/sdk/components/sensor/server.hpp
       ../../viam/sdk/config/resource.hpp
       ../../viam/sdk/module/handler_map.hpp
       ../../viam/sdk/module/module.hpp
