--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -74,6 +74,9 @@ target_sources(viamsdk
     components/sensor/client.cpp
     components/sensor/sensor.cpp
     components/sensor/server.cpp
+    components/power_sensor/client.cpp
+    components/power_sensor/power_sensor.cpp
+    components/power_sensor/server.cpp
     config/resource.cpp
     module/handler_map.cpp
     module/module.cpp
@@ -133,6 +136,9 @@ target_sources(viamsdk
       ../../viam/sdk/components/sensor/client.hpp
       ../../viam/sdk/components/sensor/sensor.hpp
       ../../viam/sdk/components/sensor/server.hpp
+      ../../viam/sdk/components/power_sensor/client.hpp
+      ../../viam/sdk/components/power_sensor/power_sensor.hpp
+      ../../viam/sdk/components/power_sensor/server.hpp
       ../../viam/sdk/config/resource.hpp
       ../../viam/sdk/module/handler_map.hpp
       ../../viam/sdk/module/module.hpp
