--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -167,6 +167,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.grpc.pb.h
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.pb.cc
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.pb.h
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.pb.cc
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.pb.h
     ${PROTO_GEN_DIR}/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/google/api/annotations.pb.h
     ${PROTO_GEN_DIR}/google/api/httpbody.pb.cc
@@ -264,6 +268,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/movementsensor/v1/movementsensor.pb.cc
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.pb.cc
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/powersensor/v1/powersensor.pb.cc
     ${PROTO_GEN_DIR}/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/google/api/httpbody.pb.cc
@@ -303,6 +309,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/movementsensor/v1/movementsensor.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/sensor/v1/sensor.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/sensor/v1/sensor.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/powersensor/v1/powersensor.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/powersensor/v1/powersensor.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/annotations.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/http.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/httpbody.pb.h
