--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -20,6 +20,7 @@ endif()
 
 set(BUF_PROTO_COMPONENTS
   app/v1
+  app/packages
   common
   component
   module
@@ -127,6 +128,8 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/app/v1/app.grpc.pb.h
     ${PROTO_GEN_DIR}/app/v1/app.pb.cc
     ${PROTO_GEN_DIR}/app/v1/app.pb.h
+    ${PROTO_GEN_DIR}/app/packages/v1/packages.pb.cc
+    ${PROTO_GEN_DIR}/app/packages/v1/packages.pb.h
     ${PROTO_GEN_DIR}/app/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/app/v1/robot.grpc.pb.h
     ${PROTO_GEN_DIR}/app/v1/robot.pb.cc
@@ -228,7 +231,7 @@ endif(VIAMCPPSDK_USE_DYNAMIC_PROTOS)
 
 
 add_custom_target(
-  update-buf 
+  update-buf
   COMMAND buf mod update ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
@@ -248,6 +251,7 @@ target_sources(viamapi
   PRIVATE
     ${PROTO_GEN_DIR}/app/v1/app.grpc.pb.cc
     ${PROTO_GEN_DIR}/app/v1/app.pb.cc
+    ${PROTO_GEN_DIR}/app/packages/v1/packages.pb.cc
     ${PROTO_GEN_DIR}/app/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/app/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/common/v1/common.grpc.pb.cc
@@ -289,6 +293,7 @@ target_sources(viamapi
     FILES
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/app.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/app.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/app/packages/v1/packages.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/robot.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/app/v1/robot.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/common/v1/common.grpc.pb.h
