--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -78,6 +78,9 @@ target_sources(viamsdk
     components/sensor/client.cpp
     components/sensor/sensor.cpp
     components/sensor/server.cpp
+    components/servo/client.cpp
+    components/servo/server.cpp
+    components/servo/servo.cpp
     config/resource.cpp
     module/handler_map.cpp
     module/module.cpp
@@ -143,6 +146,9 @@ target_sources(viamsdk
       ../../viam/sdk/components/sensor/client.hpp
       ../../viam/sdk/components/sensor/sensor.hpp
       ../../viam/sdk/components/sensor/server.hpp
+      ../../viam/sdk/components/servo/client.hpp
+      ../../viam/sdk/components/servo/server.hpp
+      ../../viam/sdk/components/servo/servo.hpp
       ../../viam/sdk/config/resource.hpp
       ../../viam/sdk/module/handler_map.hpp
       ../../viam/sdk/module/module.hpp
