--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ target_sources(viamsdk_test
     mocks/mock_movement_sensor.cpp
     mocks/mock_power_sensor.cpp
     mocks/mock_sensor.cpp
+    mocks/mock_servo.cpp
     mocks/mock_robot.cpp
     test_utils.cpp
 )
@@ -50,5 +51,6 @@ viamcppsdk_add_boost_test(test_motion.cpp)
 viamcppsdk_add_boost_test(test_movement_sensor.cpp)
 viamcppsdk_add_boost_test(test_power_sensor.cpp)
 viamcppsdk_add_boost_test(test_sensor.cpp)
+viamcppsdk_add_boost_test(test_servo.cpp)
 viamcppsdk_add_boost_test(test_robot.cpp)
 viamcppsdk_add_boost_test(test_types.cpp)
