--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,6 +78,7 @@ jobs:
         run: mkdir builds
       - name: Build
         run: |
+          echo "version=$(grep 'set(CMAKE_PROJECT_VERSION' CMakeLists.txt | sed 's/)//' | awk '{print $2}')"
           export BUF_CONFIG_DIR=$(mktemp -d)
           mkdir build
           pushd build/
