--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 name: Build + draft release
 
+# CR erodkin: delete this!
 on: pull_request
 
 jobs:
@@ -79,6 +80,7 @@ jobs:
       - name: Build
         run: |
           echo "version=$(grep 'set(CMAKE_PROJECT_VERSION' CMakeLists.txt | sed 's/)//' | awk '{print $2}')"
+          echo "version is ${{ steps.which_version.outputs.version }}"
           export BUF_CONFIG_DIR=$(mktemp -d)
           mkdir build
           pushd build/
