--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,7 @@ jobs:
         run: mkdir builds
       - name: Build
         run: |
+          hostnamectl
           echo "version=$(grep 'set.CMAKE_PROJECT_VERSION' CMakeLists.txt | sed 's/)//' | awk '{print $2}')"
           echo "version is ${{ needs.prepare.outputs.version }}"
           export BUF_CONFIG_DIR=$(mktemp -d)
